projects/compiler/test/typechecker/binary/lte_error.3.out
Error at %FILE_NAME%:3:3
Illegal operator
  |  1 <= a
       ^
No operator '<=' exists between types Int and Int?
